beautify html to make more readable

--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="A daily word puzzle"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Reactle</title><script type="text/javascript">var _gaq=_gaq||[];if(_gaq.push(["_setAccount","UA-784941-3"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}(),void 0!==window.localStorage.gameStats){if(stuff=JSON.parse(window.localStorage.gameStats),void 0===stuff.successRate){stuff.winDistribution=stuff.distribution,stuff.currentStreak=stuff.current,stuff.bestStreak=stuff.best;let t=0;for(let s=0;s<stuff.distribution.length;s++)t+=stuff.distribution[s];stuff.totalGames=t,stuff.gamesFailed=0,stuff.successRate=100,window.localStorage.gameStats=JSON.stringify(stuff)}void 0!==stuff.winDistribution&&7==stuff.winDistribution.length&&(stuff.winDistribution.pop(),window.localStorage.gameStats=JSON.stringify(stuff))}</script><script defer="defer" src="/static/js/main.68e9aa7a.js"></script><link href="/static/css/main.77246c94.css" rel="stylesheet"></head><body><noscript>Iespējo JavaScript, lai darbotos ar šo lietotni.</noscript><div id="root"></div></body></html>
+< !doctype html>
+< html lang="en">
+        < head>
+            < meta charset="utf-8" />
+            < link rel="icon" href="/favicon.ico" />
+            < meta name="viewport" content="width=device-width,initial-scale=1" />
+            < meta name="theme-color" content="#000000" />
+            < meta name="description" content="A daily word puzzle" />
+            < link rel="apple-touch-icon" href="/logo192.png" />
+            < link rel="manifest" href="/manifest.json" />
+            < title> Reactle < /title>
+                    <script type="text/javascript">
+                        var _gaq = _gaq || [];
+                        if (_gaq.push(["
+                                    _setAccount ","
+                                    UA - 784941 - 3 "]),_gaq.push(["
+                                    _trackPageview "]),function(){var t=document.createElement("
+                                    script ");t.type="
+                                    text / javascript ",t.async=!0,t.src=("
+                                    https: "==document.location.protocol?"
+                                    https: //ssl":"http://www")+".google-analytics.com/ga.js";var s=document.getElementsByTagName("script")[0];s.parentNode.insertBefore(t,s)}(),void 0!==window.localStorage.gameStats){if(stuff=JSON.parse(window.localStorage.gameStats),void 0===stuff.successRate){stuff.winDistribution=stuff.distribution,stuff.currentStreak=stuff.current,stuff.bestStreak=stuff.best;let t=0;for(let s=0;s<stuff.distribution.length;s++)t+=stuff.distribution[s];stuff.totalGames=t,stuff.gamesFailed=0,stuff.successRate=100,window.localStorage.gameStats=JSON.stringify(stuff)}void 0!==stuff.winDistribution&&7==stuff.winDistribution.length&&(stuff.winDistribution.pop(),window.localStorage.gameStats=JSON.stringify(stuff))}
+                    </script>
+                    <script defer="defer" src="/static/js/main.68e9aa7a.js"></script>
+                    <link href="/static/css/main.77246c94.css" rel="stylesheet">
+        </head>
+
+                    <body><noscript>Iesp#jo JavaScript, lai darbotos ar #o lietotni.</noscript>
+                        <div id="root"></div>
+                    </body>
+
+</html>
